[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/popup/GameTypePopup.gd" type="Script" id=1]
[ext_resource path="res://art/MainMenu/Blank-popup.png" type="Texture" id=2]
[ext_resource path="res://art/MainMenu/Player_buttton_125.png" type="Texture" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=5]
[ext_resource path="res://art/MainMenu/Right.png" type="Texture" id=6]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.901961 )

[sub_resource type="DynamicFont" id=2]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "popup"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.18, 0.29 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="GameTypePopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -333.5
margin_right = 188.0
margin_bottom = 333.5
rect_pivot_offset = Vector2( 188.439, 327.342 )
texture = ExtResource( 2 )
stretch_mode = 4

[node name="btnEasy" type="Button" parent="TextureRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -78.5
margin_right = 68.5
margin_bottom = -31.5
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Label" type="Label" parent="TextureRect/btnEasy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -12.0
margin_right = 16.0
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Easy"

[node name="btnNormal" type="Button" parent="TextureRect"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -30.5
margin_right = 68.5
margin_bottom = 16.5
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Label2" type="Label" parent="TextureRect/btnNormal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -12.0
margin_right = 27.5
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Normal"

[node name="btnhard" type="Button" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = 18.5
margin_right = 68.5
margin_bottom = 65.5
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true

[node name="Label3" type="Label" parent="TextureRect/btnhard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.5
margin_top = -12.0
margin_right = 18.5
margin_bottom = 12.0
custom_fonts/font = SubResource( 2 )
text = "Hard"

[node name="btnClose" type="Button" parent="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = 81.5
margin_right = 71.5
margin_bottom = 182.5
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="btnRight" type="Button" parent="TextureRect"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = 81.5
margin_bottom = 182.5
rect_scale = Vector2( 0.7, 0.7 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
autoplay = "popup"
anims/popup = SubResource( 3 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Normal"

[connection signal="button_down" from="TextureRect/btnEasy" to="." method="_on_btnEasy_button_down"]
[connection signal="button_up" from="TextureRect/btnEasy" to="." method="_on_btnEasy_button_up"]
[connection signal="pressed" from="TextureRect/btnEasy" to="." method="_on_btnEasy_pressed"]
[connection signal="button_down" from="TextureRect/btnNormal" to="." method="_on_btnNormal_button_down"]
[connection signal="button_up" from="TextureRect/btnNormal" to="." method="_on_btnNormal_button_up"]
[connection signal="pressed" from="TextureRect/btnNormal" to="." method="_on_btnNormal_pressed"]
[connection signal="button_down" from="TextureRect/btnhard" to="." method="_on_btnhard_button_down"]
[connection signal="button_up" from="TextureRect/btnhard" to="." method="_on_btnhard_button_up"]
[connection signal="pressed" from="TextureRect/btnhard" to="." method="_on_btnhard_pressed"]
[connection signal="button_down" from="TextureRect/btnClose" to="." method="_on_btnClose_button_down"]
[connection signal="button_up" from="TextureRect/btnClose" to="." method="_on_btnClose_button_up"]
[connection signal="pressed" from="TextureRect/btnClose" to="." method="_on_btnClose_pressed"]
[connection signal="button_down" from="TextureRect/btnRight" to="." method="_on_btnRight_button_down"]
[connection signal="button_up" from="TextureRect/btnRight" to="." method="_on_btnRight_button_up"]
[connection signal="pressed" from="TextureRect/btnRight" to="." method="_on_btnRight_pressed"]
